<resources>
    <string name="app_name">销售系统</string>
    <string name="company_name">蓝昂网络</string>

    <string name="scan_barcode_title">条形码扫描</string>
    <string name="scan_qrcode_title">二维码扫描</string>
    <string name="scan_allcode_title">二维码或条形码扫描</string>
    <string name="scan_barcode_hint">将条形码对入取景框即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框即可自动扫描</string>
    <string name="scan_result">识别结果</string>
    <string name="scan_running">正在扫描</string>
    <string name="scan_continue">继续扫描</string>


    <string name="home_footbar_cloud">首 页</string>
    <string name="home_footbar_message">消 息</string>
    <string name="home_footbar_report">报 表</string>
    <string name="home_footbar_user">设 置</string>

    <string name="action_search">搜 索</string>
    <string name="action_more">设 置</string>

    <string name="slide_menu_sign">签到</string>
    <string name="slide_menu_mymsg">我的消息</string>
    <string name="slide_menu_lv">我的等级</string>
    <string name="slide_menu_pay_music">付费音乐包</string>
    <string name="slide_menu_integral_mall">积分商城</string>
    <string name="slide_menu_mycloud">我的音乐云盘</string>
    <string name="slide_menu_recognize">听歌识曲</string>
    <string name="slide_menu_stop_time">定时停止播放</string>
    <string name="slide_menu_setting">设置</string>
    <string name="slide_menu_exit">退出应用</string>
</resources>
