<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <View
        android:id="@+id/bottom_home_layout_l"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="@drawable/footer_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_below="@+id/bottom_home_layout_l"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/bottom_home_layout_ly"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_footer_home_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/footer_cloud_btn"
                android:clickable="true" />

            <TextView
                android:id="@+id/home_bottom_home_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/home_footbar_cloud"
                android:textColor="@drawable/footer_txt_color"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_shopping_layout_ly"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_bottom_shopping_bn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/footer_message_btn"
                android:clickable="true" />

            <TextView
                android:id="@+id/home_bottom_shopping_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/home_footbar_message"
                android:textColor="@drawable/footer_txt_color"
                android:textSize="12dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/bottom_cam_layout_ly"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_bottom_cam_bn"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:src="@drawable/footer_scan_btn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_style_layout_ly"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_bottom_style_bn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/footer_report_btn"
                android:clickable="true" />

            <TextView
                android:id="@+id/home_bottom_style_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/home_footbar_report"
                android:textColor="@drawable/footer_txt_color"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_show_layout_ly"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_bottom_show_bn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/footer_user_btn"
                android:clickable="true" />

            <TextView
                android:id="@+id/home_bottom_show_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/home_footbar_user"
                android:textColor="@drawable/footer_txt_color"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>