<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >
    <SurfaceView
        android:id="@+id/capture_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <!-- 扫描框上面的布局 -->
    <RelativeLayout
        android:id="@+id/top_mask"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="@color/scan_bg">
        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@android:color/white" >

            <ImageView
                android:id="@+id/authorize_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:src="@drawable/ic_my_returns_arrow"
                />
            <TextView
                android:id="@+id/common_title_TV_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ellipsize="middle"
                android:text="商品码扫描"
                android:textSize="18sp" />
            <ImageView
                android:id="@+id/authorize_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:src="@drawable/flash_on"
                />
        </RelativeLayout>
    </RelativeLayout>
    <!-- 扫描框底部的布局 -->
    <RelativeLayout
        android:id="@+id/bottom_mask"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentBottom="true"
        android:background="@color/scan_bg"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/scan_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/scan_allcode_hint"
            android:textColor="#b4b4b4"
            android:textSize="14sp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/iv_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_below="@id/scan_hint"
            android:background="@drawable/shouquan_qrcode_s_flashgun"
            android:clickable="true" />

        <TextView
            android:id="@+id/qrcode_ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/scan_hint"
            android:background="@drawable/shouquan_qrcode_ic_back"
            android:clickable="true" />

        <TextView
            android:id="@+id/qrcode_g_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/scan_hint"
            android:background="@drawable/shouquan_qrcode_g_gallery"
            android:clickable="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/service_register_rescan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rescan_shape_button"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="继续扫描"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/qrcode_g_gallery"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/tv_scan_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/scan_result"
            android:textColor="#b4b4b4"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:layout_below="@id/service_register_rescan"
            />

    </RelativeLayout>
    <!-- 扫描框中间的布局 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_mask"
        android:layout_above="@id/bottom_mask"
        android:id="@+id/relativeLayout">
        <ImageView
            android:id="@+id/left_mask"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@color/scan_bg"
            android:contentDescription="@string/app_name" />
        <ImageView
            android:id="@+id/right_mask"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/scan_bg" />
        <RelativeLayout
            android:id="@+id/capture_crop_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/right_mask"
            android:layout_toRightOf="@id/left_mask"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent" >
            <ImageView
                android:id="@+id/capture_scan_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:background="@drawable/scanning_line" />
            <com.lenaeon.scancode.defineview.MyImageView
                android:id="@+id/scan_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>